Segundo commit: Datos referidos

--- a/contacto.html
+++ b/contacto.html
@@ -83,11 +83,11 @@
                 <h1>DATOS DE CONTACTO</h1>
                 <div class="cont__main__datos-li">
                     <ul>
-                        <li class="a"><h2>Direccion:</h2> direccion123</li>
-                        <li><h2>Telefono:</h2> 1234-5678</li>
-                        <li><h2>Celular:</h2> 15-1234-5678</li>
-                        <li><h2>Email:</h2> ejemplo@gmail.com</li>
-                        <li><h2>Web:</h2> nose</li>
+                        <li class="a">Direccion: Calle falsa 123</li>
+                        <li>Telefono: 1234 - 5678</li>
+                        <li>Celular: 15-1234-5678</li>
+                        <li>Email: preventhealth@gmail.com</li>
+                        <li>Web: preventhealth.com</li>
                     </ul>
                 </div>
                 <div class="cont__main__datos-redes">
@@ -105,9 +105,9 @@
             <div class="cont__footer-grupo">
                 <h3 class="footer__h3">Datos del grupo:</h3>
                 <ul>
-                    <li class="footer__li">Tomas Viteritti - 42148096</li>
-                    <li class="footer__li">name - dni</li>
-                    <li class="footer__li">name - dni</li>
+                    <li class="footer__li">Tomas Viteritti - 42.148.096</li>
+                    <li class="footer__li">Victor Orue - 38.445.712</li>
+                    <li class="footer__li">Eduar Chilon - 94.221.723</li>
                 </ul>
             </div>
             <div class="cont__footer-menuInferior">
