--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -60,11 +60,11 @@
         <h2>HOSPITAL MAS CERCANO ESPECIALIZADO EN LA ENFERMEDAD</h2>
         <div class="cont__aside">
             <div class="cont__aside-hospital">
-                <h3>NOMBRE HOSPITAL</h3>
+                <h3>Hospital General de Springfield</h3>
                 <ul>
-                    <li>Tel</li>
-                    <li>Direccion</li>
-                    <li>Ciudad</li>
+                    <li>Tel: 1234 - 5678</li>
+                    <li>Direccion: Calle Falsa 123</li>
+                    <li>Ciudad : De la Furia</li>
                 </ul>
                 <img src="img/hospital.png" alt="">
             </div>
@@ -178,9 +178,9 @@
             <div class="cont__footer-grupo">
                 <h3 class="footer__h3">Datos del grupo:</h3>
                 <ul>
-                    <li class="footer__li">Tomas Viteritti - 42148096</li>
-                    <li class="footer__li">name - dni</li>
-                    <li class="footer__li">name - dni</li>
+                    <li class="footer__li">Tomas Viteritti - 42.148.096</li>
+                    <li class="footer__li">Victor Orue - 38.445.712</li>
+                    <li class="footer__li">Eduar Chilon - 94.221.723</li>
                 </ul>
             </div>
             <div class="cont__footer-menuInferior">
