--- a/listado-enfermedades.html
+++ b/listado-enfermedades.html
@@ -122,9 +122,9 @@
             <div class="cont__footer-grupo">
                 <h3 class="footer__h3">Datos del grupo:</h3>
                 <ul>
-                    <li class="footer__li">Tomas Viteritti - 42148096</li>
-                    <li class="footer__li">name - dni</li>
-                    <li class="footer__li">name - dni</li>
+                    <li class="footer__li">Tomas Viteritti - 42.148.096</li>
+                    <li class="footer__li">Victor Orue - 38.445.712</li>
+                    <li class="footer__li">Eduar Chilon - 94.221.723</li>
                 </ul>
             </div>
             <div class="cont__footer-menuInferior">
