Eduar: edición de sliders

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     
     <section class="contenedor">
         <ul class="bxslider">
-             <li><img src="img/carrusel.png" /></li>
-              <li><img src="img/index1.png" /></li>
-              <li><img src="img/carrusel2.png" /></li>
+             <li><img src="img/slider01.png" /></li>
+              <li><img src="img/slider02.png" /></li>
+              <li><img src="img/slider03.png" /></li>
          </ul>
     </section>
     
